# caption_manager

./: .env.example  Dockerfile  LICENSE  README.md  README_EN.md  docker-compose.yaml  docker-entrypoint.sh  main.py  pyproject.toml  角色.txt
.github/workflows/: release.yml
docker/: .gitignore  docker-compose.yml
docker/anima-trainer/: Dockerfile  NOTICE.md
docker/anima-trainer/config/: global_config.toml
docker/anima-trainer/jobs/default/: config.toml  dataset.toml  sample_prompts.txt
docker/caption-manager/: Dockerfile  NOTICE.md
docker/wd-llm-caption-cli/: Dockerfile  NOTICE.md
filtering_tags/: .gitignore  NOTICE.md  THIRD_PARTY_LICENSE
src/caption_manager/: di.py  main.py
src/caption_manager/adapters/inbound/router/: __init__.py
src/caption_manager/adapters/inbound/web/: __init__.py
src/caption_manager/adapters/outbound/: __init__.py  blacklist_tags.py  caption_reader.py  character_tags.py  flag_reader.py  over_write.py  overlap_tags.py
src/caption_manager/application/dto/: __init__.py  auto_remove_config.py  folder_path.py
src/caption_manager/application/ports/inbound/: __init__.py  add_prefix.py  auto_remove.py  caption_reader.py  custom_remove.py  remove.py  (+1 more)
src/caption_manager/application/services/: __init__.py  add_prefix.py  auto_remove.py  caption_reader.py  custom_remove.py  folder_resolver.py  remove.py
src/caption_manager/applications/services/: __init__.py  caption_reader.py  remove.py
src/caption_manager/domain/exceptions/: __init__.py  base.py  exceptions.py
src/caption_manager/domain/models/: __init__.py  captions.py  character_tags.py  overlap_tags.py
src/caption_manager/domain/services/: __init__.py  blacklist.py  character.py  custom.py  overlap.py  prefix.py  remove.py
test/: _analyze_filter.out  _analyze_filter.py  test_all.py  test_outbound_adapters.py
typings/dishka/: __init__.pyi
typings/dishka/integrations/: fastapi.pyi
typings/portalocker/: __init__.pyi
(+16 files in other folders)
