[project]
name = "caption-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "typer>=0.26.7",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
caption-manager = "caption_manager.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caption_manager"]

[dependency-groups]
dev = [
    "nuitka>=4.1.3",
    "ordered-set>=4.1.0",
    "zstandard>=0.25.0",
]
