[project]
name = "caption-manager"
version = "0.2.5"
description = "用于自动清洗和添加lora训练的角色标签"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dishka>=1.10.1",
    "dotenv>=0.9.9",
    "fastapi>=0.138.0",
    "portalocker>=3.2.0",
    "pydantic>=2.13.4",
    "typer>=0.26.7",
    "uvicorn>=0.49.0",
]

[project.scripts]
caption-manager = "caption_manager.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caption_manager"]

[dependency-groups]
dev = [
    "nuitka>=4.1.3",
    "ordered-set>=4.1.0",
    "zstandard>=0.25.0",
]
